=General *Elemental system recode part 3. -This part focused on adding AI support for the elementals. -With the AI requiring a lot of work its best to do the main functions here and -do the other functions in the next part.
*Added AI support for the elementals.
-Elementals appear to use the same AI as monsters in official and because of this
-I decided to make a copy of the mob's AI and then do the needed edits to make it
-usable for elementals. The basic functions and feature are complete which gives
-the elementals life. They will follow its master, attack anything the master
-attacks, attack anything that attacks it, search for and attack stuff when set
-to aggressive, etc.
-
-Only the main parts of the AI is done. More features and functions will be added
-in the next update.

*Added the "elemtalk" command.
-This allows you to make a elemental say what you type. Fun extra to have.

*Added the "elemental_ai" config setting.
-Allows setting custom AI settings for the elemental's AI.
-Note: Not all of the settings work since the AI is still under development.

git-svn-id: https://svn.code.sf.net/p/v1-3ceam/code/trunk@893 cad27aaa-dce3-4a30-a00a-e4fd67c11881

--- a/rewrite/conf/atcommand_athena.conf
+++ b/rewrite/conf/atcommand_athena.conf
@@ -183,6 +183,9 @@ pettalk: 10,10
 // Command what the player's homunculus will say.
 homtalk: 10,10
 
+// Command what the player's elemental will say.
+elemtalk: 10,10
+
 // Locates and displays the position of a certain mob on the current map.
 mobsearch: 10,10
 // Locates and displays the position of a certain mob on your mini-map
