=General *Elemental system recode part 4. -This part focused on coding in the rest of the AI for handling skill related -stuff. Elementals will now autocast their offensive skills when attacking and -also use them when commanded with Elemental Action. Skills are also handled -through 3 seprate skill type functions and are triggered depending on the -elementals set mood. - -With how well the skills control is being handled in the source im thinking of -just removing the elemental_skill_db since its just feels pointless. It turned -out to be much easier and cleaner to hardcode the stuff in a group for each -mode. Best and most efficant way to go since all skills are 1 level max, -there's no skill tree, and skills can't be used/triggered by normal means. - -With the main parts of the system now working I feel its safe to enable the -Sorcerer's elemental related skills. There's still some bugs as the system -is still in development but nothing to worry about.
*elem_support
*elem_offensive_skill_chance
*elem_offensive_skill_casttime
*elem_offensive_skill_aftercast
-Added these configs to the elemental config.

*Updated the "useskill" command to check if the player has a elemental when
-casting a skill from their skill range. If one exists, it will cast the skill
-instead of the player. This check is also added for mercenarys and their skills.

*Elementals are now summoned with full HP/SP....again.

*Elementals are now only allowed to attack when in offensive mode.

*Cleaned up some code.



=Jobs
*Sorcerer
-Enabled skills related to the elemental system.
-With the system recode now stable and mostly working it should be safe to allow
-use of these skills.



=Skills
*Elementals
-Updated all timer data settings in the skill_renewal_cast_db to prepare for
-coding in their skills soon. Some may need to be hardcoded later on.
-All skill animation code is complete (should be) and so is the status support.
-They only look pretty for now but I wanted a way to visually see if th

--- a/rewrite/conf/battle/elemental.conf
+++ b/rewrite/conf/battle/elemental.conf
@@ -59,6 +59,20 @@
 // Example: 0x140 -> Chase players through warps + use skills in random order.
 elemental_ai: 0
 
+// Elementals by default don't attack at all while in Wait/Passive/Defensive modes.
+// If enabled, they will be allowed to attack by attacking the master's target,
+// attack any enemy that attacks its master, and attack anything that attacks it.
+// This will not make elementals aggressive on these modes.
+elem_support: no
+
+// Elementals set to offensive mode have a chance of using their offensive skills when attacking.
+// By default the chance is 5%, cast time is 1000ms, and aftercast is 10000ms.
+// Note: These settings only apply to autocast triggered skills. The aftercast only stops further
+// autocasting until it ends and doesn't stop manual triggering through Elemental Action.
+elem_offensive_skill_chance: 5
+elem_offensive_skill_casttime: 1000
+elem_offensive_skill_aftercast: 10000
+
 // Does autoloot work, when a monster is killed by elemental only?
 // Config not yet supported.
 //elemental_autoloot: yes
